fixed anchor links on mobile, ugh what a slog that is

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -38,7 +38,7 @@
     top: 40px;
     width: 100%;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 17px;
     border-bottom: 1px solid #e8e8e8;
     @media (max-width: 545px) {
       padding-bottom: 0px;
